# rgb-int

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  rgb24.rs  rgba32.rs
