[package]
name = "rgb_int"
description = "Integer representations and manipulations of rgb colours"
version = "0.1.2"
edition = "2021"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/rgb-int"
repository = "https://github.com/gridbugs/rgb-int"
documentation = "https://docs.rs/rgb_int"


[features]
serialize = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["serde_derive"], optional = true }
rand = { version = "0.8", optional = true }
